WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270624
REGRESSION(
275085@main
): [UnifiedPDF] Certain internal macOS builds don't track selections on drag
https://bugs.webkit.org/show_bug.cgi?id=270624
Summary
REGRESSION(275085@main): [UnifiedPDF] Certain internal macOS builds don't tra...
Abrar Rahman Protyasha
Reported
2024-03-07 01:50:18 PST
Specifically, this can be seen in internal builds that satisfy the HAVE(PDFDOCUMENT_SELECTION_WITH_GRANULARITY) platform condition but don't actually have an implementation for -[PDFDocument selectionFromPage:atPoint:toPage:atPoint:withGranularity:].
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-07 01:50:27 PST
<
rdar://problem/124197851
>
Abrar Rahman Protyasha
Comment 2
2024-03-07 02:00:44 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25571
EWS
Comment 3
2024-03-07 12:57:23 PST
Committed
275802@main
(c7082cab7fe7): <
https://commits.webkit.org/275802@main
> Reviewed commits have been landed. Closing PR #25571 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug