REGRESSION(275085@main): [UnifiedPDF] Certain internal macOS builds don't track selections on drag https://bugs.webkit.org/show_bug.cgi?id=270624 rdar://124197851

Reviewed by Tim Horton.

Specifically, this can be seen in internal builds that satisfy the
HAVE(PDFDOCUMENT_SELECTION_WITH_GRANULARITY) platform condition but don't
actually have an implementation for
-[PDFDocument selectionFromPage:atPoint:toPage:atPoint:withGranularity:].

275085@main failed to specify a fallback behavior for such builds
because the -[PDFDocument selectionFromPage:atPoint:toPage:atPoint:]
call was placed behind the #else branch of the platform condition.

This patch ensures all builds can fallback correctly to the older
PDFDocument API, either if the API is missing from the SDK or has not
been implemented.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::extendCurrentSelectionIfNeeded):

Canonical link: https://commits.webkit.org/275802@main